auto-test/tests/chapter_18/invalid_types/extra_credit/union_tag_resolution/address_of_wrong_union_type.c
union u {
    int i;
    char c;
};

int main(void) {
    
    union u foo = {0};

    
    
    union u {
        int i;
        char c;
    };

    
    
    union u *ptr = &foo;
}